# DevWrapped

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml  wrapped.html  wrapped.json
.github/actions/devwrapped/: action.yml
.github/workflows/: ci.yml  devwrapped-test.yml  devwrapped.yml
devwrapped/: __init__.py  cache.py  cli.py  compare.py  exit_codes.py  logging_utils.py
devwrapped.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
devwrapped/archetypes/: engine.py
devwrapped/metrics/: engine.py
devwrapped/model/: events.py
devwrapped/providers/: base.py  registry.py
devwrapped/providers/bitbucket/: __init__.py  client.py  discovery.py  fetch.py  provider.py
devwrapped/providers/github/: __init__.py  client.py  discovery.py  fetch.py  provider.py
devwrapped/render/: heatmap.py  html.py  index.py  json.py  og_card.py
devwrapped/stories/: engine.py
devwrapped/templates/: wrapped.html
templates/: wrapped.html
tests/: test_cache.py  test_compare.py  test_exit_codes.py  test_logging_utils.py  test_registry.py
tests/archetypes/: test_engine.py
tests/bitbucket/: test_client.py  test_client_cache_and_retry.py  test_discovery.py  test_fetch.py  test_provider.py
tests/cli/: test_diff_command.py  test_generate.py  test_render_command.py
tests/github/: test_client.py  test_client_cache.py  test_discovery.py  test_fetch.py  test_provider.py  test_reviews.py
tests/metrics/: test_engine.py
tests/render/: test_heatmap.py  test_html_deep_link.py  test_html_renderer.py  test_index.py  test_json_renderer.py  test_og_card.py
tests/stories/: test_engine.py  test_yoy_story.py
