[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devwrapped"
version = "0.1.0"
description = "Spotify Wrapped-style year-end stats for developers"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Manish Choudhary" }
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pyyaml>=6.0",
  "requests>=2.31.0",
  "jinja2>=3.1.3"
]

[project.scripts]
devwrapped = "devwrapped.cli:app"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
devwrapped = ["../templates/*.html"]
