[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devwrapped"
version = "0.2.0"
description = "Spotify Wrapped-style year-end stats for developers"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Manish Choudhary" }
]
keywords = ["github", "stats", "wrapped", "developer", "year-in-review"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pyyaml>=6.0",
  "requests>=2.31.0",
  "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14",
  "responses>=0.25",
  "ruff>=0.6",
]

[project.scripts]
devwrapped = "devwrapped.cli:app"

[project.urls]
Homepage = "https://github.com/Maniac198/devwrapped"
Repository = "https://github.com/Maniac198/devwrapped"

[tool.setuptools.packages.find]
include = ["devwrapped*"]

[tool.setuptools.package-data]
devwrapped = ["templates/*.html"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
# Avoid the "duplicate basename" collision by importing tests as packages.
# Requires each tests/ subdir to have an __init__.py (we provide them).

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
]
ignore = [
  "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]
