[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devwrapped"
version = "0.2.0"
description = "Spotify Wrapped-style year-end stats for developers"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Manish Choudhary" }
]
keywords = ["github", "stats", "wrapped", "developer", "year-in-review"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pyyaml>=6.0",
  "requests>=2.31.0",
  "jinja2>=3.1.3",
]

[project.optional-dependencies]
share = [
  "Pillow>=10.3",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.14",
  "responses>=0.25",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-requests>=2.31",
  "pre-commit>=3.7",
  "Pillow>=10.3",
]

[project.scripts]
devwrapped = "devwrapped.cli:app"

[project.urls]
Homepage = "https://github.com/Maniac198/devwrapped"
Repository = "https://github.com/Maniac198/devwrapped"

[tool.setuptools.packages.find]
include = ["devwrapped*"]

[tool.setuptools.package-data]
devwrapped = ["templates/*.html"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=devwrapped --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["devwrapped"]
omit = ["devwrapped/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
]
ignore = [
  "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
# Gentle defaults: don't require type annotations everywhere yet, but lint what
# we do annotate. Ratchet these up as the codebase matures.
disallow_untyped_defs = false
disallow_incomplete_defs = false
files = ["devwrapped"]
